tests/errors/regex-unknown-class/errors.snap
---
source: tests/errors.rs
assertion_line: 50
expression: output
---
error[E0130]: Unknown character class `bogus` in regular expression.
  ╭─▸ tests/errors/regex-unknown-class/main.pa:1:20
  │
1 │ def bad = `digit | bogus | letter`
  │                    ^^^^^
  │
  ╰─ note: known classes: `any`, `digit`, `letter`, `whitespace`, `word`.
